--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -38,6 +38,7 @@ Aa-3
                 <% } %>
             </select>
         </div>
+
         <div class="form-group">
             <label for="movieIdentifier" class="">
                 作品コード
@@ -45,14 +46,16 @@ Aa-3
             <input type="text" class="form-control" name="movieIdentifier" id="movieIdentifier" placeholder=""
                 maxlength=64 value="">
         </div>
+
         <div class="form-group">
             <label for="name" class="">
                 上映作品名
             </label>
             <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="">
         </div>
+
         <div class="form-group">
-            <label for="name" class="">
+            <label for="containsEnded" class="">
             </label>
             <div class="form-check">
                 <label class="form-check-label" for="containsEnded">
