--- a/views/accountTitles/form.ejs
+++ b/views/accountTitles/form.ejs
@@ -1,82 +1,74 @@
-<div class="form-group row">
-    <label for="inCodeSet[codeValue]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="inCodeSet[codeValue]" class="">
         科目<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <% if (!isNew) { %>
-        <input type="hidden" name="inCodeSet[codeValue]" value="<%= forms.inCodeSet.codeValue %>">
-        <% } %>
-        <select class="form-control" name="inCodeSet[codeValue]" <% if (!isNew) { %> disabled <% } %>>
-            <option value="">選択してください</option>
-            <% for (const accountTitleSet of accountTitleSets) { %>
-            <option value="<%= accountTitleSet.codeValue %>" <% if (forms.inCodeSet.codeValue===accountTitleSet.codeValue)
+    <% if (!isNew) { %>
+    <input type="hidden" name="inCodeSet[codeValue]" value="<%= forms.inCodeSet.codeValue %>">
+    <% } %>
+    <select class="form-control" name="inCodeSet[codeValue]" <% if (!isNew) { %> disabled <% } %>>
+        <option value="">選択してください</option>
+        <% for (const accountTitleSet of accountTitleSets) { %>
+        <option value="<%= accountTitleSet.codeValue %>" <% if (forms.inCodeSet.codeValue===accountTitleSet.codeValue)
                 { %> selected <% } %>>
-                <%= accountTitleSet.inCodeSet.codeValue %>
-                <%= accountTitleSet.inCodeSet.name %>
-                -
-                <%= accountTitleSet.codeValue %>
-                <%= accountTitleSet.name %>
-            </option>
-            <% } %>
-        </select>
-        <p class="error message text-danger">
-            <% if (errors && errors['inCodeSet.codeValue']) { %>
-            <%- errors['inCodeSet.codeValue'].msg %>
-            <% } %>
-        </p>
-    </div>
+            <%= accountTitleSet.inCodeSet.codeValue %>
+            <%= accountTitleSet.inCodeSet.name %>
+            -
+            <%= accountTitleSet.codeValue %>
+            <%= accountTitleSet.name %>
+        </option>
+        <% } %>
+    </select>
+    <p class="error message text-danger">
+        <% if (errors && errors['inCodeSet.codeValue']) { %>
+        <%- errors['inCodeSet.codeValue'].msg %>
+        <% } %>
+    </p>
 </div>
 
-<div class="form-group row">
-    <label for="codeValue" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="codeValue" class="">
         細目コード<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <input class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
-            value="<%= forms.codeValue %>" <% if (!isNew) { %> readonly <% } %>>
-        <p class="message">半角64文字以内でご入力ください。</p>
-        <p class="error message text-danger">
-            <% if (errors && errors['codeValue']) { %>
-            <%- errors['codeValue'].msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
+        value="<%= forms.codeValue %>" <% if (!isNew) { %> readonly <% } %>>
+    <p class="message">半角64文字以内でご入力ください。</p>
+    <p class="error message text-danger">
+        <% if (errors && errors['codeValue']) { %>
+        <%- errors['codeValue'].msg %>
+        <% } %>
+    </p>
 </div>
 
-<div class="form-group row">
-    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="name" class="">
         細目名称<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
-        <p class="message">64文字以内でご入力ください。</p>
-        <p class="error message text-danger">
-            <% if (errors && errors['name']) { %>
-            <%- errors['name'].msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
+    <p class="message">64文字以内でご入力ください。</p>
+    <p class="error message text-danger">
+        <% if (errors && errors['name']) { %>
+        <%- errors['name'].msg %>
+        <% } %>
+    </p>
 </div>
 
-<div class="form-group row">
-    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="name" class="">
         追加特性<font color="red">＊</font>
     </label>
-    <div class="col-sm-8">
-        <% forms.additionalProperty.forEach(function (_, key) { %>
-        <div class="input-group">
-            <!-- <span class="input-group-addon">Name:Value</span> -->
-            <input class="form-control" name="additionalProperty[<%= key %>][name]"
-                id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
-                value="<%= forms.additionalProperty[key].name %>">
+    <% forms.additionalProperty.forEach(function (_, key) { %>
+    <div class="input-group">
+        <!-- <span class="input-group-addon">Name:Value</span> -->
+        <input class="form-control" name="additionalProperty[<%= key %>][name]"
+            id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
+            value="<%= forms.additionalProperty[key].name %>">
 
-            <input class="form-control" name="additionalProperty[<%= key %>][value]"
-                id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
-                value="<%= forms.additionalProperty[key].value %>">
-        </div>
-        <% }) %>
-        <p class="message"></p>
-        <p class="error message text-danger">
-        </p>
+        <input class="form-control" name="additionalProperty[<%= key %>][value]"
+            id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
+            value="<%= forms.additionalProperty[key].value %>">
     </div>
+    <% }) %>
+    <p class="message"></p>
+    <p class="error message text-danger">
+    </p>
 </div>
