--- a/views/creativeWorks/movie/edit.ejs
+++ b/views/creativeWorks/movie/edit.ejs
@@ -7,29 +7,24 @@ Aa-9
 <%- contentFor('scripts') %>
 
 <%- contentFor('body') %>
+
 <div class="form-container">
-    <% /* フォーム */ %>
     <form method="post" class="p-3 bg-light-gray">
         <div class="menu-group">
             <%- include('../../common/errorMessage') %>
             <%- include('../../common/successMessage') %>
         </div>
 
-        <% /* 作品コード */ %>
         <div class="form-group row">
-            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+            <label class="">
                 作品コード
             </label>
-            <div class="col-md-8">
-                <input readonly style="width:auto;" type="text" class="form-control" name="identifier" id="identifier"
-                    placeholder="" maxlength=64 value="<%= forms.identifier %>">
-            </div>
+            <input readonly style="width:auto;" type="text" class="form-control" name="identifier" id="identifier"
+                placeholder="" maxlength=64 value="<%= forms.identifier %>">
         </div>
 
-        <% /* 登録・更新共通部 */ %>
         <%- include('form', { forms: forms, isNew: true }) %>
 
-        <% /* 更新ボタン */ %>
         <div class="btn-area panel-body">
             <button type="button" class="btn btn-ok btn-primary">更新する</button>
         </div>
