--- a/views/creativeWorks/movie/form.ejs
+++ b/views/creativeWorks/movie/form.ejs
@@ -1,60 +1,55 @@
-<div class="form-group row">
-    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="name" class="">
         作品名<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
-        <p class="message">
-            全角64文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors.name) { %>
-            <%- errors.name.msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
+    <p class="message">
+        全角64文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors.name) { %>
+        <%- errors.name.msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="headline">
+
+<div class="form-group">
+    <label class="" for="headline">
         サブタイトル
     </label>
-    <div class="col-md-8">
-        <input class="form-control" name="headline" id="headline" placeholder="" maxlength=64
-            value="<%= forms.headline %>">
-        <p class="message">
-            全角64文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors.headline) { %>
-            <%- errors.headline.msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" name="headline" id="headline" placeholder="" maxlength=64 value="<%= forms.headline %>">
+    <p class="message">
+        全角64文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors.headline) { %>
+        <%- errors.headline.msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="duration" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="duration" class="">
         上映時間
     </label>
-    <div class="col-md-8">
-        <input class="form-control" style="width:30%;display:inline-block;" name="duration" id="duration" placeholder=""
-            maxlength=10 value="<%= forms.duration %>">
-        分
-        <p class="message">
-            半角10文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors.duration) { %>
-            <%- errors.duration.msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" style="width:30%;display:inline-block;" name="duration" id="duration" placeholder=""
+        maxlength=10 value="<%= forms.duration %>">
+    分
+    <p class="message">
+        半角10文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors.duration) { %>
+        <%- errors.duration.msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="contentRating" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="contentRating" class="">
         レイティング<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <%
+    <%
             let ratings = [
                 {code: '', name: {ja: 'なし', en:'None'}},
                 {code: 'G', name: {ja: 'General', en:'General'}},
@@ -63,60 +58,53 @@
                 {code: 'R18+', name: {ja: 'R-18指定', en:'R-18'}}
             ];
         %>
-        <select name="contentRating" id="contentRating" class="form-control">
-            <% for (let rating of ratings) { %>
-            <option value="<%= rating.code %>" <% if (forms.contentRating===rating.code) { %> selected="selected"
-                <% } %>>
-                <%- rating.name.ja %>
-            </option>
-            <% } %>
-        </select>
-        <p class="error message text-danger">
-            <% if (errors && errors.contentRating) { %>
-            <%- errors.contentRating.msg %>
-            <% } %>
-        </p>
-    </div>
+    <select name="contentRating" id="contentRating" class="form-control">
+        <% for (let rating of ratings) { %>
+        <option value="<%= rating.code %>" <% if (forms.contentRating===rating.code) { %> selected="selected" <% } %>>
+            <%- rating.name.ja %>
+        </option>
+        <% } %>
+    </select>
+    <p class="error message text-danger">
+        <% if (errors && errors.contentRating) { %>
+        <%- errors.contentRating.msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="datePublished">
+
+<div class="form-group">
+    <label class="" for="datePublished">
         公開日
     </label>
-    <div class="col-md-8">
-        <input class="form-control datepicker" name="datePublished" autocomplete="off" id="datePublished"
-            value="<%= forms.datePublished %>">
-    </div>
+    <input class="form-control datepicker" name="datePublished" autocomplete="off" id="datePublished"
+        value="<%= forms.datePublished %>">
 </div>
-<div class="form-group row">
-    <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="offers[availabilityEnds]">
+
+<div class="form-group">
+    <label class="" for="offers[availabilityEnds]">
         興行終了予定日
     </label>
-    <div class="col-md-8">
-        <input class="form-control datepicker" name="offers[availabilityEnds]" autocomplete="off"
-            id="offers[availabilityEnds]"
-            value="<%= (forms.offers !== undefined) ? forms.offers.availabilityEnds : '' %>">
-    </div>
+    <input class="form-control datepicker" name="offers[availabilityEnds]" autocomplete="off"
+        id="offers[availabilityEnds]" value="<%= (forms.offers !== undefined) ? forms.offers.availabilityEnds : '' %>">
 </div>
 
-<div class="form-group row">
-    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="name" class="">
         追加特性
     </label>
-    <div class="col-sm-8">
-        <% forms.additionalProperty.forEach((_, key) => { %>
-        <div class="input-group mb-1">
-            <!-- <span class="input-group-addon">Name:Value</span> -->
-            <input class="form-control" name="additionalProperty[<%= key %>][name]"
-                id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
-                value="<%= forms.additionalProperty[key].name %>">
+    <% forms.additionalProperty.forEach((_, key) => { %>
+    <div class="input-group mb-1">
+        <!-- <span class="input-group-addon">Name:Value</span> -->
+        <input class="form-control" name="additionalProperty[<%= key %>][name]"
+            id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
+            value="<%= forms.additionalProperty[key].name %>">
 
-            <input class="form-control" name="additionalProperty[<%= key %>][value]"
-                id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
-                value="<%= forms.additionalProperty[key].value %>">
-        </div>
-        <% }) %>
-        <p class="message"></p>
-        <p class="error message text-danger">
-        </p>
+        <input class="form-control" name="additionalProperty[<%= key %>][value]"
+            id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
+            value="<%= forms.additionalProperty[key].value %>">
     </div>
+    <% }) %>
+    <p class="message"></p>
+    <p class="error message text-danger">
+    </p>
 </div>
