--- a/views/events/screeningEventSeries/form.ejs
+++ b/views/events/screeningEventSeries/form.ejs
@@ -1,150 +1,137 @@
-<div class="form-group row">
-    <label for="locationBranchCode" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="locationBranchCode" class="">
         劇場<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <select class="form-control" name="locationBranchCode">
-            <% if (user.cognitoGroups.movieTheaters === undefined) { %>
-            <option value="">選択してください</option>
-            <% for (const movieTheater of movieTheaters) { %>
-            <option value="<%= movieTheater.branchCode %>" <% if (forms.locationBranchCode===movieTheater.branchCode) {
+    <select class="form-control" name="locationBranchCode">
+        <% if (user.cognitoGroups.movieTheaters === undefined) { %>
+        <option value="">選択してください</option>
+        <% for (const movieTheater of movieTheaters) { %>
+        <option value="<%= movieTheater.branchCode %>" <% if (forms.locationBranchCode===movieTheater.branchCode) {
                 %> selected <% } %>>
-                <%= movieTheater.name.ja %>
-            </option>
-            <% } %>
-            <% } else { %>
-            <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
-            <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
-            <% } %>
-            <% } %>
-        </select>
-    </div>
+            <%= movieTheater.name.ja %>
+        </option>
+        <% } %>
+        <% } else { %>
+        <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
+        <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
+        <% } %>
+        <% } %>
+    </select>
 </div>
-<div class="form-group row">
-    <label for="locationBranchCode" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="locationBranchCode" class="">
         作品<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <select class="form-control" name="workPerformed[identifier]" id="workPerformed[identifier]">
-            <option value="">選択してください</option>
-            <% for (const movie of movies) { %>
-            <option value="<%= movie.identifier %>" data-name="<%= movie.name %>" data-headline="<%= movie.headline %>"
-                data-availabilityEnds="<%= movie.offers.availabilityEnds %>" <% if (forms.workPerformed.identifier===movie.identifier)
+    <select class="form-control" name="workPerformed[identifier]" id="workPerformed[identifier]">
+        <option value="">選択してください</option>
+        <% for (const movie of movies) { %>
+        <option value="<%= movie.identifier %>" data-name="<%= movie.name %>" data-headline="<%= movie.headline %>"
+            data-availabilityEnds="<%= movie.offers.availabilityEnds %>" <% if (forms.workPerformed.identifier===movie.identifier)
                 { %> selected <% } %>>
-                <%= movie.name %>
-            </option>
-            <% } %>
-        </select>
-        <p class="error message text-danger">
-            <% if (errors && errors['workPerformed.identifier']) { %>
-            <%- errors['workPerformed.identifier'].msg %>
-            <% } %>
-        </p>
-    </div>
+            <%= movie.name %>
+        </option>
+        <% } %>
+    </select>
+    <p class="error message text-danger">
+        <% if (errors && errors['workPerformed.identifier']) { %>
+        <%- errors['workPerformed.identifier'].msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="nameJa" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="nameJa" class="">
         上映作品名<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <input class="form-control" name="nameJa" id="nameJa" placeholder="" maxlength=64 value="<%= forms.nameJa %>">
-        <p class="message">
-            全角64文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors.nameJa) { %>
-            <%- errors.nameJa.msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" name="nameJa" id="nameJa" placeholder="" maxlength=64 value="<%= forms.nameJa %>">
+    <p class="message">
+        全角64文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors.nameJa) { %>
+        <%- errors.nameJa.msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="kanaName" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="kanaName" class="">
         上映作品名カナ
     </label>
-    <div class="col-md-8">
-        <input class="form-control" name="kanaName" id="kanaName" placeholder="" maxlength=64
-            value="<%= forms.kanaName %>">
-        <p class="message">
-            全角64文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors.kanaName) { %>
-            <%- errors.kanaName.msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" name="kanaName" id="kanaName" placeholder="" maxlength=64 value="<%= forms.kanaName %>">
+    <p class="message">
+        全角64文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors.kanaName) { %>
+        <%- errors.kanaName.msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="nameEn" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="nameEn" class="">
         上映作品名英
     </label>
-    <div class="col-md-8">
-        <input class="form-control" name="nameEn" id="nameEn" placeholder="" maxlength=128 value="<%- forms.nameEn %>">
-        <p class="message">
-            半角128文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors.nameEn) { %>
-            <%- errors.nameEn.msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" name="nameEn" id="nameEn" placeholder="" maxlength=128 value="<%- forms.nameEn %>">
+    <p class="message">
+        半角128文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors.nameEn) { %>
+        <%- errors.nameEn.msg %>
+        <% } %>
+    </p>
 </div>
 
-<div class="form-group row">
-    <label for="headline[ja]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="headline[ja]" class="">
         上映作品サブタイトル名
     </label>
-    <div class="col-md-8">
-        <input class="form-control" name="headline[ja]" id="headline[ja]" placeholder="" maxlength=64
-            value="<%- forms.headline.ja %>">
-        <p class="message">
-            全角64文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors['headline.ja']) { %>
-            <%- errors['headline.ja'].msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" name="headline[ja]" id="headline[ja]" placeholder="" maxlength=64
+        value="<%- forms.headline.ja %>">
+    <p class="message">
+        全角64文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors['headline.ja']) { %>
+        <%- errors['headline.ja'].msg %>
+        <% } %>
+    </p>
 </div>
 
-<div class="form-group row">
-    <label for="startDate" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="startDate" class="">
         上映開始日<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <input autocomplete="off" class="form-control datepicker" style="width:30%;display:inline-block;"
-            name="startDate" id="startDate" placeholder="" maxlength=10 value="<%= forms.startDate %>">
-        <p class="error message text-danger">
-            <% if (errors && errors.startDate) { %>
-            <%- errors.startDate.msg %>
-            <% } %>
-        </p>
-    </div>
-</div>
-<div class="form-group row">
-    <label for="endDate" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        上映終了日<span class="text-danger">＊</span>
-    </label>
-    <div class="col-md-8">
-        <input autocomplete="off" class="form-control datepicker" style="width:30%;display:inline-block;" name="endDate"
-            id="endDate" placeholder="" maxlength=10 value="<%= forms.endDate %>">
-        <p class="error message text-danger">
-            <% if (errors && errors.endDate) { %>
-            <%- errors.endDate.msg %>
-            <% } %>
-        </p>
-    </div>
+    <input autocomplete="off" class="form-control datepicker" style="width:30%;display:inline-block;" name="startDate"
+        id="startDate" placeholder="" maxlength=10 value="<%= forms.startDate %>">
+    <p class="error message text-danger">
+        <% if (errors && errors.startDate) { %>
+        <%- errors.startDate.msg %>
+        <% } %>
+    </p>
 </div>
 
-<div class="form-group row">
-    <label for="contentRating" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="endDate" class="">
+        上映終了日<span class="text-danger">＊</span>
+    </label>
+    <input autocomplete="off" class="form-control datepicker" style="width:30%;display:inline-block;" name="endDate"
+        id="endDate" placeholder="" maxlength=10 value="<%= forms.endDate %>">
+    <p class="error message text-danger">
+        <% if (errors && errors.endDate) { %>
+        <%- errors.endDate.msg %>
+        <% } %>
+    </p>
+</div>
+
+<div class="form-group">
+    <label for="contentRating" class="">
         レイティング<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <%
+    <%
             let ratings = [
                 {code: 'G', name: {ja: 'なし', en:'General Audience'}},
                 {code: 'PG12', name: {ja: 'PG-12指定', en:'PG-12'}},
@@ -152,106 +139,99 @@
                 {code: 'R18+', name: {ja: 'R-18指定', en:'R-18'}}
             ];
         %>
-        <select name="contentRating" id="contentRating" class="form-control" disabled>
-            <% for (let rating of ratings) { %>
-            <option value="<%= rating.code %>" <% if (forms.workPerformed.contentRating===rating.code) { %>
-                selected="selected" <% } %>>
-                <%- rating.name.ja %>
-            </option>
-            <% } %>
-        </select>
-        <p class="error message text-danger">
-            <% if (errors && errors.contentRating) { %>
-            <%- errors.contentRating.msg %>
-            <% } %>
-        </p>
-    </div>
+    <select name="contentRating" id="contentRating" class="form-control" disabled>
+        <% for (let rating of ratings) { %>
+        <option value="<%= rating.code %>" <% if (forms.workPerformed.contentRating===rating.code) { %>
+            selected="selected" <% } %>>
+            <%- rating.name.ja %>
+        </option>
+        <% } %>
+    </select>
+    <p class="error message text-danger">
+        <% if (errors && errors.contentRating) { %>
+        <%- errors.contentRating.msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="translationType" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="translationType" class="">
         字幕/吹替
     </label>
-    <div class="col-md-8">
-        <%
+    <%
             let subtitles = [
                 {code: '0', name: {ja: '字幕', en:'subtitle'}},
                 {code: '1', name: {ja: '吹替', en:'dubbing'}}
             ];
         %>
-        <select name="translationType" id="translationType" class="form-control">
-            <option value="">---</option>
-            <% for (let subtitle of subtitles) { %>
-            <option value="<%= subtitle.code %>" <% if (forms.translationType===subtitle.code) { %> selected="selected"
-                <% } %>>
-                <%- subtitle.name.ja %>
-            </option>
-            <% } %>
-        </select>
-    </div>
+    <select name="translationType" id="translationType" class="form-control">
+        <option value="">---</option>
+        <% for (let subtitle of subtitles) { %>
+        <option value="<%= subtitle.code %>" <% if (forms.translationType===subtitle.code) { %> selected="selected"
+            <% } %>>
+            <%- subtitle.name.ja %>
+        </option>
+        <% } %>
+    </select>
 </div>
-<div class="form-group row">
-    <label for="videoFormat" class="col-md-4 py-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="videoFormat" class="">
         上映形態<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8 py-3">
-        <% Object.keys(VideoFormatType).forEach((key) => { %>
-        <input type="checkbox" name="videoFormatType[]" value="<%= VideoFormatType[key] %>" <% if
+    <% Object.keys(VideoFormatType).forEach((key) => { %>
+    <input type="checkbox" name="videoFormatType[]" value="<%= VideoFormatType[key] %>" <% if
             (forms.videoFormatType.indexOf(VideoFormatType[key])>= 0) { %>checked="checked" <% } %>>
-        <%= VideoFormatType[key] %>
-        <% }) %>
+    <%= VideoFormatType[key] %>
+    <% }) %>
 
-        <p class="error message text-danger">
-            <% if (errors && errors.videoFormatType) { %>
-            <%- errors.videoFormatType.msg %>
-            <% } %>
-        </p>
-    </div>
+    <p class="error message text-danger">
+        <% if (errors && errors.videoFormatType) { %>
+        <%- errors.videoFormatType.msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="mvtkFlg" class="col-md-4 py-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="mvtkFlg" class="">
         ムビチケ利用
     </label>
-    <div class="col-md-8 form-inline py-3">
-        <input type="checkbox" <% if (forms.mvtkFlg==1) { %> checked <% } %> value="1" name="mvtkFlg">
-    </div>
+    <input type="checkbox" <% if (forms.mvtkFlg==1) { %> checked <% } %> value="1" name="mvtkFlg">
 </div>
-<div class="form-group row">
-    <label for="description" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="description" class="">
         補足説明
     </label>
-    <div class="col-md-8">
-        <input class="form-control" name="description" id="description" placeholder="" maxlength=30
-            value="<% if (forms.description !== undefined && forms.description.ja) { %> <%- forms.description.ja %> <% } %>">
-        <p class="message">
-            全角30文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors.description) { %>
-            <%- errors.description.msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" name="description" id="description" placeholder="" maxlength=30
+        value="<% if (forms.description !== undefined && forms.description.ja) { %> <%- forms.description.ja %> <% } %>">
+    <p class="message">
+        全角30文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors.description) { %>
+        <%- errors.description.msg %>
+        <% } %>
+    </p>
 </div>
 
-<div class="form-group row">
-    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="name" class="">
         追加特性
     </label>
-    <div class="col-sm-8">
-        <% forms.additionalProperty.forEach((_, key) => { %>
-        <div class="input-group mb-1">
-            <!-- <span class="input-group-addon">Name:Value</span> -->
-            <input class="form-control" name="additionalProperty[<%= key %>][name]"
-                id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
-                value="<%= forms.additionalProperty[key].name %>">
+    <% forms.additionalProperty.forEach((_, key) => { %>
+    <div class="input-group mb-1">
+        <!-- <span class="input-group-addon">Name:Value</span> -->
+        <input class="form-control" name="additionalProperty[<%= key %>][name]"
+            id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
+            value="<%= forms.additionalProperty[key].name %>">
 
-            <input class="form-control" name="additionalProperty[<%= key %>][value]"
-                id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
-                value="<%= forms.additionalProperty[key].value %>">
-        </div>
-        <% }) %>
-        <p class="message"></p>
-        <p class="error message text-danger">
-        </p>
+        <input class="form-control" name="additionalProperty[<%= key %>][value]"
+            id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
+            value="<%= forms.additionalProperty[key].value %>">
     </div>
+    <% }) %>
+    <p class="message"></p>
+    <p class="error message text-danger">
+    </p>
 </div>
