--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -18,18 +18,16 @@ Aa-12
         <div class="menu-group">
         </div>
 
-        <div class="form-group row">
-            <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="name" class="">
                 名称
             </label>
-            <div class="col-md-8">
-                <input class="form-control" name="name" id="name" placeholder="" maxlength=64>
-            </div>
+            <input class="form-control" name="name" id="name" placeholder="" maxlength=64>
         </div>
 
         <div>
-            <button type="button" class="btn btn-ok search btn-primary">検索する</button>
-            <button type="button" class="reset-condition btn btn-danger">検索内容リセット</button>
+            <button type="button" class="reset-condition btn btn-danger pull-right">検索内容リセット</button>
+            <button type="button" class="btn btn-ok search btn-primary pull-right">検索</button>
         </div>
     </form>
 </div>
