--- a/views/places/movieTheater/new.ejs
+++ b/views/places/movieTheater/new.ejs
@@ -15,23 +15,21 @@ Aa-18
             <%- include('../../common/successMessage') %>
         </div>
 
-        <div class="form-group row">
-            <label for="branchCode" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="branchCode" class="">
                 枝番号<span class="text-danger">＊</span>
             </label>
-            <div class="col-md-8">
-                <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder="" maxlength=64
-                    value="<%= forms.branchCode %>">
-                <p class="message">
-                    <% /*半角64文字以内でご入力ください。*/ %>
-                    半角64文字以内でご入力ください。
-                </p>
-                <p class="error message text-danger">
-                    <% if (errors && errors.branchCode) { %>
-                    <%- errors.branchCode.msg %>
-                    <% } %>
-                </p>
-            </div>
+            <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder="" maxlength=64
+                value="<%= forms.branchCode %>">
+            <p class="message">
+                <% /*半角64文字以内でご入力ください。*/ %>
+                半角64文字以内でご入力ください。
+            </p>
+            <p class="error message text-danger">
+                <% if (errors && errors.branchCode) { %>
+                <%- errors.branchCode.msg %>
+                <% } %>
+            </p>
         </div>
 
 
