--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -48,13 +48,11 @@ Aa-11
             <label for="modifiedFrom" class="">
                 更新日(From - To)
             </label>
-            <div class="">
-                <input class="form-control datepicker" style="width:30%;display:inline-block;" placeholder=""
-                    maxlength=10 name="modifiedFrom" id="modifiedFrom" value="" />
-                ～
-                <input class="form-control datepicker" style="width:30%;display:inline-block;" placeholder=""
-                    maxlength=10 name="modifiedThrough" id="modifiedThrough" value="" />
-            </div>
+            <input class="form-control datepicker" style="width:30%;display:inline-block;" placeholder="" maxlength=10
+                name="modifiedFrom" id="modifiedFrom" value="" />
+            ～
+            <input class="form-control datepicker" style="width:30%;display:inline-block;" placeholder="" maxlength=10
+                name="modifiedThrough" id="modifiedThrough" value="" />
         </div>
 
         <div class="form-group">
