--- a/views/serviceTypes/form.ejs
+++ b/views/serviceTypes/form.ejs
@@ -1,39 +1,35 @@
-<div class="form-group row">
-    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="name" class="">
         名称<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
-        <p class="message">
-            全角64文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors.name) { %>
-            <%- errors.name.msg %>
-            <% } %>
-        </p>
-    </div>
+    <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
+    <p class="message">
+        全角64文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors.name) { %>
+        <%- errors.name.msg %>
+        <% } %>
+    </p>
 </div>
 
-<div class="form-group row">
-    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="name" class="">
         追加特性
     </label>
-    <div class="col-sm-8">
-        <% forms.additionalProperty.forEach((_, key) => { %>
-        <div class="input-group mb-1">
-            <!-- <span class="input-group-addon">Name:Value</span> -->
-            <input class="form-control" name="additionalProperty[<%= key %>][name]"
-                id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
-                value="<%= forms.additionalProperty[key].name %>">
+    <% forms.additionalProperty.forEach((_, key) => { %>
+    <div class="input-group mb-1">
+        <!-- <span class="input-group-addon">Name:Value</span> -->
+        <input class="form-control" name="additionalProperty[<%= key %>][name]"
+            id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
+            value="<%= forms.additionalProperty[key].name %>">
 
-            <input class="form-control" name="additionalProperty[<%= key %>][value]"
-                id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
-                value="<%= forms.additionalProperty[key].value %>">
-        </div>
-        <% }) %>
-        <p class="message"></p>
-        <p class="error message text-danger">
-        </p>
+        <input class="form-control" name="additionalProperty[<%= key %>][value]"
+            id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
+            value="<%= forms.additionalProperty[key].value %>">
     </div>
+    <% }) %>
+    <p class="message"></p>
+    <p class="error message text-danger">
+    </p>
 </div>
