--- a/views/ticketTypeGroup/add.ejs
+++ b/views/ticketTypeGroup/add.ejs
@@ -17,21 +17,19 @@ Aa-7
         </div>
 
         <div class="form-group row">
-            <label for="id" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+            <label for="id" class="">
                 券種グループコード<span class="text-danger">＊</span>
             </label>
-            <div class="col-md-8">
-                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64
-                    value="<%= forms.id %>">
-                <p class="message">
-                    半角64文字以内でご入力ください。
-                </p>
-                <p class="error message text-danger">
-                    <% if (errors && errors.id) { %>
-                    <%- errors.id.msg %>
-                    <% } %>
-                </p>
-            </div>
+            <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64
+                value="<%= forms.id %>">
+            <p class="message">
+                半角64文字以内でご入力ください。
+            </p>
+            <p class="error message text-danger">
+                <% if (errors && errors.id) { %>
+                <%- errors.id.msg %>
+                <% } %>
+            </p>
         </div>
 
         <%- include('form', { forms: forms }) %>
