--- a/views/ticketTypeGroup/form.ejs
+++ b/views/ticketTypeGroup/form.ejs
@@ -1,150 +1,145 @@
-<div class="form-group row">
-    <label for="name[ja]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="name[ja]" class="">
         券種グループ名<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
-            value="<%= forms.name.ja %>">
-        <p class="message">
-            全角64文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors['name.ja']) { %>
-            <%- errors['name.ja'].msg %>
-            <% } %>
-        </p>
-    </div>
+    <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
+        value="<%= forms.name.ja %>">
+    <p class="message">
+        全角64文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors['name.ja']) { %>
+        <%- errors['name.ja'].msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="name[en]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="name[en]" class="">
         券種グループ名英<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
-            value="<%= forms.name.en %>">
-        <p class="message">
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors['name.en']) { %>
-            <%- errors['name.en'].msg %>
-            <% } %>
-        </p>
-    </div>
+    <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
+        value="<%= forms.name.en %>">
+    <p class="message">
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors['name.en']) { %>
+        <%- errors['name.en'].msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="ticketTypes" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="ticketTypes" class="">
         対象券種名<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8"></div>
 </div>
-<div class="form-group row">
-    <span for="price" class="col-md-4  pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <span for="price" class="">
         券種売上金額
     </span>
-    <div class="col-md-8">
-        <input type="number" class="form-control" name="price" id="price" placeholder="" maxlength=10>
-        <p class="error message text-danger">
-            <% if (errors && errors.ticketTypes) { %>
-            <%- errors.ticketTypes.msg %>
-            <% } %>
-        </p>
-    </div>
-    <div class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"></div>
-    <div id="price-list" class="mx-auto">
-        <ul id="sortable1" class="connectedSortable">
+    <div class="row">
+        <div class="col-md-8">
+            <input type="number" class="form-control" name="price" id="price" placeholder="" maxlength=10>
+            <p class="error message text-danger">
+                <% if (errors && errors.ticketTypes) { %>
+                <%- errors.ticketTypes.msg %>
+                <% } %>
+            </p>
+        </div>
+        <div class=""></div>
+        <div id="price-list" class="mx-auto">
+            <ul id="sortable1" class="connectedSortable">
 
-        </ul>
-        <ul id="sortable2" class="connectedSortable">
-            <% ticketTypes.forEach((ticketType) => { %>
-            <li class="ui-state-highlight" uid="<%= ticketType.id %>"
-                appliesToMovieTicketType="<%= ticketType.priceSpecification.appliesToMovieTicketType %>"
-                accountsReceivable="<%= ticketType.priceSpecification.accounting.accountsReceivable %>">
-                <%= ticketType.alternateName.ja %>
-                <%= `(${Math.floor(ticketType.priceSpecification.price / ticketType.priceSpecification.referenceQuantity.value)})` %>
-                <%= (ticketType.priceSpecification.appliesToMovieTicketType !== undefined) ? `(${ticketType.priceSpecification.appliesToMovieTicketType})` : '' %>
-            </li>
-            <% }) %>
-        </ul>
+            </ul>
+            <ul id="sortable2" class="connectedSortable">
+                <% ticketTypes.forEach((ticketType) => { %>
+                <li class="ui-state-highlight" uid="<%= ticketType.id %>"
+                    appliesToMovieTicketType="<%= ticketType.priceSpecification.appliesToMovieTicketType %>"
+                    accountsReceivable="<%= ticketType.priceSpecification.accounting.accountsReceivable %>">
+                    <%= ticketType.alternateName.ja %>
+                    <%= `(${Math.floor(ticketType.priceSpecification.price / ticketType.priceSpecification.referenceQuantity.value)})` %>
+                    <%= (ticketType.priceSpecification.appliesToMovieTicketType !== undefined) ? `(${ticketType.priceSpecification.appliesToMovieTicketType})` : '' %>
+                </li>
+                <% }) %>
+            </ul>
+        </div>
     </div>
 </div>
-<div class="form-group row">
-    <label for="description.ja" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="description.ja" class="">
         補足説明
     </label>
-    <div class="col-md-8">
-        <input type="text" class="form-control" name="description[ja]" id="description.ja" placeholder="" maxlength=64
-            value="<%= forms.description.ja %>">
-        <p class="message">
-            全角64文字以内でご入力ください。
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors['description.ja']) { %>
-            <%- errors['description.ja'].msg %>
-            <% } %>
-        </p>
-    </div>
+    <input type="text" class="form-control" name="description[ja]" id="description.ja" placeholder="" maxlength=64
+        value="<%= forms.description.ja %>">
+    <p class="message">
+        全角64文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors['description.ja']) { %>
+        <%- errors['description.ja'].msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="description.en" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="description.en" class="">
         補足説明英
     </label>
-    <div class="col-md-8">
-        <input type="text" class="form-control" name="description[en]" id="description.en" placeholder="" maxlength=64
-            value="<%= forms.description.en %>">
-        <p class="message">
-        </p>
-        <p class="error message text-danger">
-            <% if (errors && errors['description.en']) { %>
-            <%- errors['description.en'].msg %>
-            <% } %>
-        </p>
-    </div>
+    <input type="text" class="form-control" name="description[en]" id="description.en" placeholder="" maxlength=64
+        value="<%= forms.description.en %>">
+    <p class="message">
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors['description.en']) { %>
+        <%- errors['description.en'].msg %>
+        <% } %>
+    </p>
 </div>
-<div class="form-group row">
-    <label for="serviceType" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+<div class="form-group">
+    <label for="serviceType" class="">
         興行区分<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-8">
-        <select name="serviceType" id="serviceType" class="form-control">
-            <% for (let serviceType of serviceTypes) { %>
-            <% if (forms.serviceType === serviceType.id) { %>
-            <option value="<%= serviceType.id %>" selected>
-                <%= serviceType.name %>
-            </option>
-            <% } else { %>
-            <option value="<%= serviceType.id %>">
-                <%= serviceType.name %>
-            </option>
-            <% } %>
-            <% } %>
-        </select>
-        <p class="error message text-danger">
-            <% if (errors && errors.serviceType) { %>
-            <%- errors.serviceType.msg %>
-            <% } %>
-        </p>
-    </div>
+    <select name="serviceType" id="serviceType" class="form-control">
+        <% for (let serviceType of serviceTypes) { %>
+        <% if (forms.serviceType === serviceType.id) { %>
+        <option value="<%= serviceType.id %>" selected>
+            <%= serviceType.name %>
+        </option>
+        <% } else { %>
+        <option value="<%= serviceType.id %>">
+            <%= serviceType.name %>
+        </option>
+        <% } %>
+        <% } %>
+    </select>
+    <p class="error message text-danger">
+        <% if (errors && errors.serviceType) { %>
+        <%- errors.serviceType.msg %>
+        <% } %>
+    </p>
 </div>
 
-<div class="form-group row">
-    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+<div class="form-group">
+    <label for="name" class="">
         追加特性
     </label>
-    <div class="col-sm-8">
-        <% forms.additionalProperty.forEach((_, key) => { %>
-        <div class="input-group mb-1">
-            <!-- <span class="input-group-addon">Name:Value</span> -->
-            <input class="form-control" name="additionalProperty[<%= key %>][name]"
-                id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
-                value="<%= forms.additionalProperty[key].name %>">
+    <% forms.additionalProperty.forEach((_, key) => { %>
+    <div class="input-group mb-1">
+        <!-- <span class="input-group-addon">Name:Value</span> -->
+        <input class="form-control" name="additionalProperty[<%= key %>][name]"
+            id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
+            value="<%= forms.additionalProperty[key].name %>">
 
-            <input class="form-control" name="additionalProperty[<%= key %>][value]"
-                id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
-                value="<%= forms.additionalProperty[key].value %>">
-        </div>
-        <% }) %>
-        <p class="message"></p>
-        <p class="error message text-danger">
-        </p>
+        <input class="form-control" name="additionalProperty[<%= key %>][value]"
+            id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
+            value="<%= forms.additionalProperty[key].value %>">
     </div>
+    <% }) %>
+    <p class="message"></p>
+    <p class="error message text-danger">
+    </p>
 </div>
