### Added - プロダクトオファー管理を追加

--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -38,20 +38,26 @@
         </li>
         <li class="nav-item <%= (displayId === 'AT-01') ? 'active': ''; %>">
             <a class="nav-link" href="/accountTitles">
-                <i class="material-icons">content_paste</i>
+                <i class="icon fa fa-table"></i>
                 <p>細目検索</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-17') ? 'active': ''; %>">
             <a class="nav-link" href="/serviceTypes">
-                <i class="material-icons">content_paste</i>
+                <i class="icon fa fa-table"></i>
                 <p>興行区分検索</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'PS-02') ? 'active': ''; %>">
             <a class="nav-link" href="/priceSpecifications">
-                <i class="material-icons">content_paste</i>
+                <i class="icon fa fa-dollar-sign"></i>
                 <p>価格仕様検索</p>
+            </a>
+        </li>
+        <li class="nav-item <%= (displayId === 'PO-01') ? 'active': ''; %>">
+            <a class="nav-link" href="/productOffers">
+                <i class="icon fa fa-glasses"></i>
+                <p>プロダクトオファー</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-11') ? 'active': ''; %>">
