--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -17,8 +17,8 @@
     <label for="name[ja]" class="">
         サイト表示用券種名<span class="text-danger">＊</span>
     </label>
-    <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64 value=<%=forms.name.ja
-            %>>
+    <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64 value="<%=forms.name.ja
+            %>">
     <p class="message">
         全角64文字以内でご入力ください。
     </p>
@@ -33,8 +33,8 @@
     <label for="name[en]" class="">
         サイト表示用券種名英<span class="text-danger">＊</span>
     </label>
-    <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64 value=<%=forms.name.en
-            %>>
+    <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64 value="<%=forms.name.en
+            %>">
     <p class="message">
         半角64文字以内でご入力ください。
     </p>
@@ -65,8 +65,8 @@
     <label for="price" class="">
         発生金額<span class="text-danger">＊</span>
     </label>
-    <input type="text" class="form-control" name="price" id="price" placeholder="" maxlength=10 value=<%=forms.price
-            %>>
+    <input type="text" class="form-control" name="price" id="price" placeholder="" maxlength=10 value="<%=forms.price
+            %>">
     <p class="message">
         半角10文字以内でご入力ください。
     </p>
@@ -82,7 +82,7 @@
         売上金額<span class="text-danger">＊</span>
     </label>
     <input type="text" class="form-control" name="accountsReceivable" id="accountsReceivable" placeholder=""
-        maxlength=10 value=<%=forms.accountsReceivable %>>
+        maxlength=10 value="<%=forms.accountsReceivable %>">
     <p class="message">
         半角10文字以内でご入力ください。
     </p>
@@ -184,7 +184,7 @@
         補足説明
     </label>
     <input type="text" class="form-control" name="description[ja]" id="description[ja]" placeholder="" maxlength=64
-        value=<%=forms.description.ja %>>
+        value="<%=forms.description.ja %>">
     <p class="message">
         全角64文字以内でご入力ください。
     </p>
@@ -200,7 +200,7 @@
         補足説明英
     </label>
     <input type="text" class="form-control" name="description[en]" id="description[en]" placeholder="" maxlength=64
-        value=<%=forms.description.en %>>
+        value="<%=forms.description.en %>">
     <p class="message">
         半角64文字以内でご入力ください。
     </p>
